Temporary fix to help with jumpiness of nav. When we change the nav to a dropdown this won't be necessary.

--- a/gui/frontend/src/dashboard/style.css
+++ b/gui/frontend/src/dashboard/style.css
@@ -68,7 +68,7 @@ table {
 #nav.affix {
 	position: fixed;
 	top: 0;
-	width: 100%
+	width: 100%;
 }
 
 #nav .tree {
